<?xml version="1.0" encoding="utf-8"?>
<nkarasch.repeatingreminder.gui.AlertView xmlns:android="http://schemas.android.com/apk/res/android"
                                       android:id="@+id/alert_view"
                                       android:layout_width="match_parent"
                                       android:layout_height="match_parent"
                                       android:orientation="vertical"
                                       android:paddingRight="10dp"
                                       android:paddingLeft="10dp"
                                       android:elevation="5dp"
                                       android:background="@color/primary">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:clickable="true"
                    android:id="@+id/rl_display">

        <TextView
            android:id="@+id/text_label_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textSize="20sp"
            android:textColor="@color/text_primary"/>

        <!--fontFamily is addressed programatically for devices below API 16 -->
        <TextView
            android:id="@+id/text_frequency"
            android:layout_width="wrap_content"
            android:textSize="35sp"
            android:padding="30dp"
            android:paddingTop="20dp"
            android:fontFamily="sans-serif-thin"
            android:layout_alignTop="@id/text_label_display"
            android:layout_height="wrap_content"
            android:textColor="@color/text_primary"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switch_on_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:focusable="false"
            android:textColor="@color/text_primary"/>

        <TextView
            android:id="@+id/text_days_display"
            android:layout_width="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/text_frequency"
            android:textColor="@color/text_primary"/>

        <TextView
            android:id="@+id/text_times_display"
            android:layout_width="wrap_content"
            android:textSize="12sp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/text_frequency"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:textColor="@color/text_primary"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_above="@id/text_times_display"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/switch_on_off">

            <ImageView
                android:id="@+id/iv_expand_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_expand_down"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:contentDescription="@string/expand"/>

        </FrameLayout>

    </RelativeLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:paddingRight="10dp"
                  android:paddingLeft="10dp"
                  android:id="@+id/ll_expansion"
                  android:animateLayoutChanges="true"
                  android:visibility="gone">

        <CheckBox
            android:id="@+id/check_schedule"
            android:layout_width="wrap_content"
            android:layout_height="48dip"
            android:layout_gravity="center_vertical|start"
            android:text="@string/schedule"
            android:textSize="16sp"
            android:paddingLeft="@dimen/padding_checkbox"
            android:textColor="@color/text_primary"/>

        <LinearLayout
            android:id="@+id/ll_schedule_expansion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_schedule_days"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:layout_gravity="top"
                android:orientation="horizontal">
                <!-- Day buttons are put here programatically -->
            </LinearLayout>

            <TextView
                android:id="@+id/text_time_start"
                android:layout_width="wrap_content"
                android:layout_height="48dip"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:paddingLeft="4dip"
                android:drawablePadding="20dp"
                android:drawableLeft="@drawable/ic_tab_alarm_activated"
                android:drawableStart="@drawable/ic_tab_alarm_activated"
                android:ellipsize="marquee"
                android:gravity="center_vertical"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textSize="16sp"
                android:textColor="@color/text_primary"/>

            <TextView
                android:id="@+id/text_time_end"
                android:layout_width="wrap_content"
                android:layout_height="48dip"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:paddingLeft="4dip"
                android:drawablePadding="20dp"
                android:drawableLeft="@drawable/ic_alarm_off_black"
                android:drawableStart="@drawable/ic_alarm_off_black"
                android:ellipsize="marquee"
                android:gravity="center_vertical"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textSize="16sp"
                android:textColor="@color/text_primary"/>
        </LinearLayout>

        <TextView
            android:id="@+id/text_tone"
            android:layout_width="wrap_content"
            android:layout_height="48dip"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:paddingLeft="4dip"
            android:drawablePadding="20dp"
            android:drawableLeft="@drawable/ic_ringtone"
            android:drawableStart="@drawable/ic_ringtone"
            android:ellipsize="marquee"
            android:gravity="center_vertical"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textSize="16sp"
            android:textColor="@color/text_primary"/>

        <CheckBox
            android:id="@+id/check_mute"
            android:layout_width="wrap_content"
            android:layout_height="48dip"
            android:layout_gravity="center_vertical|start"
            android:text="@string/mute"
            android:textSize="16sp"
            android:paddingLeft="@dimen/padding_checkbox"
            android:textColor="@color/text_primary"/>

        <CheckBox
            android:id="@+id/check_vibrate"
            android:layout_width="wrap_content"
            android:layout_height="48dip"
            android:layout_gravity="center_vertical|start"
            android:text="@string/vibrate"
            android:textSize="16sp"
            android:paddingLeft="@dimen/padding_checkbox"
            android:textColor="@color/text_primary"/>

        <CheckBox
            android:id="@+id/check_light"
            android:layout_width="wrap_content"
            android:layout_height="48dip"
            android:layout_gravity="center_vertical|start"
            android:text="@string/light"
            android:textSize="16sp"
            android:paddingLeft="@dimen/padding_checkbox"
            android:textColor="@color/text_primary"/>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/ib_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete_small"
                android:background="@null"
                android:layout_centerInParent="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:contentDescription="@string/delete_alert"/>

            <ImageView
                android:id="@+id/iv_expand_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_expand_down"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:layout_centerInParent="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:rotation="180"
                android:contentDescription="@string/expand"/>
        </RelativeLayout>

    </LinearLayout>
</nkarasch.repeatingreminder.gui.AlertView>